# kimchi

./: Cargo.toml
kimchi_client/: Cargo.toml
kimchi_client/src/: chat.rs  main.rs
kimchi_messages/: Cargo.toml
kimchi_messages/src/: lib.rs
kimchi_server/: Cargo.toml
kimchi_server/src/: main.rs
