[package]
name = "kimchi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ewebsock = "0.2.0"
tokio = { version = "1.22.0", features = ["full"] }
kimchi_messages = {path = "../kimchi_messages"}
clap = { version = "4.0.29", features = ["derive"] }
nokhwa = { version = "0.10.0", features = ["input-native"] }
egui_extras = { version = "0.20.0", features = ["image"] }
eframe = "0.20.1"
