[package]
name = "kimchi_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
env_logger = "0.10.0"
futures-channel = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
